feat(exercises): Update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "declaration": true,
     "module": "commonjs",
     "noImplicitReturns": false,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
+    "allowUnusedLabels": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noEmitOnError": false,
